--- a/src/webparts/reactpppspfxcontrols/ReactpppspfxcontrolsWebPart.manifest.json
+++ b/src/webparts/reactpppspfxcontrols/ReactpppspfxcontrolsWebPart.manifest.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://developer.microsoft.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
   "id": "be3d0cfe-5c0f-4b79-8a6e-7b879c0a49ae",
-  "alias": "ReactpppspfxcontrolsWebPart",
+  "alias": "React-PPP-SPFx-Controls",
   "componentType": "WebPart",
 
   // The "*" signifies that the version should be taken from the package.json
@@ -17,11 +17,11 @@
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Other
     "group": { "default": "Other" },
-    "title": { "default": "reactpppspfxcontrols" },
-    "description": { "default": "reactpppspfxcontrols description" },
+    "title": { "default": "React-PPP-SPFx-Controls" },
+    "description": { "default": "PPP demo with PnP SPFx-Controls" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "reactpppspfxcontrols"
+      "description": "PPP demo with PnP SPFx-Controls"
     }
   }]
 }
