--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,6 +1,6 @@
 {
   "@microsoft/generator-sharepoint": {
-    "version": "1.12.1",
+    "version": "1.13.0-beta.13",
     "libraryName": "react-ppp-sp-fx-controls",
     "libraryId": "02f70232-9020-4d4c-b82d-193f30f61034",
     "environment": "spo",
